# JobPacker

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.bat  hook-tls_client.py  jobpacker.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
tests/: __init__.py  conftest.py  test_config.py  test_export.py  test_search.py  test_ui.py
